--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
         <option value="Liana Melchenko">Liana Melchenko</option>
         <option value="Lily Chen">Lily Chen</option>
         <option value="Linda Koch">Linda Koch</option>
+        <option value="Lisa Fotenakes">Lisa Fotenakes</option>
         <option value="Livia Pascal">Livia Pascal</option>
         <option value="Loreen Ruff">Loreen Ruff</option>
         <option value="Lorena Garza">Lorena Garza</option>
